unpackaged/main/default/objects/Case/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Country</label>
    <length>150</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>