unpackaged/main/default/objects/Case/fields/Previous_stage__c.field-meta.xml
<CustomField>
    <fullName>Previous_stage__c</fullName>
    <label>Previous stage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>