unpackaged/main/default/objects/Case/fields/Primary_contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_contact__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>Primary Contact field</description>
    <label>Primary contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>