unpackaged/main/default/objects/Case/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <complianceGroup>GDPR;PCI</complianceGroup>
    <description>New state field (modified)</description>
    <label>State</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>